fix z-index header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ html {
     box-shadow: 0 0 2px rgb(0, 0, 0, 10%) inset;
     background-color: #fff;
     height: var(--header-height);
+    z-index: 1;
 }
 
 .sticky-header .topbar {
